--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>projecthibernate-appcontextbased</groupId>
-	<artifactId>projecthibernate-appcontextbased</artifactId>
+	<groupId>projectopenjpa-appcontextbased</groupId>
+	<artifactId>projectopenjpa-appcontextbased</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>projecthibernate-appcontextbased</name>
-	<description>projecthibernate-appcontextbased</description>
+	<name>projectopenjpa-appcontextbased</name>
+	<description>projectopenjpa-appcontextbased</description>
 
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>4.3.0.RELEASE</org.springframework-version>
-		<hibernate.version>4.2.2.Final</hibernate.version>
+		<openjpa.version>2.4.2</openjpa.version>
 	</properties>
 	<dependencies>
 		<!-- Spring -->
@@ -32,20 +32,14 @@
 		    <artifactId>spring-aspects</artifactId>
 		    <version>${org.springframework-version}</version>
 		</dependency>
-		
 
-		<!-- Hibernate -->
+		<!-- OpenJPA -->
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>${hibernate.version}</version>
+			<groupId>org.apache.openjpa</groupId>
+			<artifactId>openjpa-all</artifactId>
+			<version>${openjpa.version}</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-entitymanager</artifactId>
-			<version>${hibernate.version}</version>
-		</dependency>
+    	
 
 		<!-- commons DBCP -->
 		<dependency>
@@ -66,7 +60,7 @@
 		    <artifactId>reflections</artifactId>
 		    <version>0.9.9-RC2</version>
 		</dependency>
-		
+
 		<dependency>
 		    <groupId>org.aspectj</groupId>
 		    <artifactId>aspectjrt</artifactId>
@@ -105,7 +99,7 @@
 					<version>2.4</version>
 					<configuration>
 						<warSourceDirectory>src/main/webapp</warSourceDirectory>
-						<warName>projecthibernate</warName>
+						<warName>projectopenjpa-javabased</warName>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
 				</plugin>
